--- a/Meep.Tech.Data.IO.csproj
+++ b/Meep.Tech.Data.IO.csproj
@@ -15,4 +15,18 @@
     </Reference>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.dll&quot; &quot;..\..\..\..\apps\unity\Overworld\Assets\Packages\ECSBAM\IO\&quot; /y" />
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.pdb&quot; &quot;..\..\..\..\apps\unity\Overworld\Assets\Packages\ECSBAM\IO\&quot; /y" />
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.deps.json&quot; &quot;..\..\..\..\apps\unity\Overworld\Assets\Packages\ECSBAM\IO\&quot; /y" />
+
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.dll&quot; &quot;..\..\..\..\apps\unity\Overworld Launcher\Assets\Packages\ECSBAM\IO\&quot; /y" />
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.pdb&quot; &quot;..\..\..\..\apps\unity\Overworld Launcher\Assets\Packages\ECSBAM\IO\&quot; /y" />
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.deps.json&quot; &quot;..\..\..\..\apps\unity\Overworld Launcher\Assets\Packages\ECSBAM\IO\&quot; /y" />
+
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.dll&quot; &quot;..\..\..\..\apps\unity\Overworld Tests\Assets\Packages\ECSBAM\IO\&quot; /y" />
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.pdb&quot; &quot;..\..\..\..\apps\unity\Overworld Tests\Assets\Packages\ECSBAM\IO\&quot; /y" />
+    <Exec Command="xcopy &quot;bin\Debug\netstandard2.1\Meep.Tech.Data.IO.deps.json&quot; &quot;..\..\..\..\apps\unity\Overworld Tests\Assets\Packages\ECSBAM\IO\&quot; /y" />
+  </Target>
+
 </Project>
